# FNAF-2D-Clone

./: CMakeLists.txt  LICENSE  README.md
src/: HelperFuncs.cpp  HelperFuncs.h  main.cpp
src/game/: Game.cpp  Game.h  GameState.cpp  GameState.h
src/states/: Camera.cpp  Camera.h  GameOver.cpp  GameOver.h  Menu.cpp  Menu.h  Office.cpp  Office.h
